--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start": "nodemon index.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
     "nodemon": "^1.19.1"
   }
 }
